--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">
     <!--Theme Colors -->
 
-    <color name="primary">@color/teal</color>
-    <color name="primary_dark">@color/teal_dark</color>
-    <color name="accent">@color/hot_pink</color>
+    <color name="primary">@color/md_orange_A700</color>
+    <color name="primary_dark">@color/md_deep_orange_A400</color>
+    <color name="accent">@color/red</color>
     <color name="secondary_text">#757575</color>
     <color name="divider_color">#BDBDBD</color>
 
@@ -12,35 +12,8 @@
     <color name="toolbar_background">@color/primary</color>
     <color name="toolbar_text">@color/google_white</color>
 
-    <color name="recyclerview_background">#e5e5e5</color>
-    <color name="search_pager_text">@color/text_darkest</color>
-
-    <color name="balance_background">@color/black</color>
-    <color name="balance_text">@color/white</color>
-
     <color name="drawer_background">@color/google_white</color>
     <color name="drawer_text_color">@color/grey</color>
-
-    <color name="card_title_default">#33B6EA</color>
-    <color name="card_account_positive_default">#4ac925</color>
-    <color name="card_account_negative_default">#e00707</color>
-
-    <color name="account_title_default">@color/text_darker</color>
-    <color name="account_details_default">@color/text_darkest</color>
-
-    <color name="transaction_title_default">@color/text_darker</color>
-    <color name="transaction_details_default">@color/text_darkest</color>
-    <color name="transaction_title_has_plans">#FF9933</color>
-    <color name="transaction_title_no_plans">@color/text_darkest</color>
-
-    <color name="plans_title_default">@color/text_darker</color>
-    <color name="plans_details_default">@color/text_darkest</color>
-
-    <color name="categories_main_category_default">@color/text_darker</color>
-    <color name="categories_subcategory_default">@color/text_darkest</color>
-
-    <color name="subcategory_title_default">@color/text_darker</color>
-    <color name="subcategory_details_default">@color/text_darkest</color>
 
     <color name="text_light">@color/white</color>
     <color name="text_darker">#212121</color>
