--- a/MyHome/app/src/main/res/menu/drawer_menu.xml
+++ b/MyHome/app/src/main/res/menu/drawer_menu.xml
@@ -6,7 +6,7 @@
         <item
             android:id="@+id/home"
             android:checked="false"
-            android:icon="@android:drawable/ic_menu_manage"
+            android:icon="@android:drawable/ic_menu_view"
             android:title="Home" />
 
         <item
@@ -14,29 +14,17 @@
             android:checked="false"
             android:icon="@android:drawable/ic_menu_search"
             android:title="Find A Doctor" />
-
-        <item
-            android:id="@+id/share"
-            android:checked="false"
-            android:icon="@android:drawable/ic_menu_share"
-            android:title="Share" />
-
-        <item
-            android:id="@+id/gallery"
-            android:checked="false"
-            android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Gallery" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Options">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/profile"
                 android:icon="@android:drawable/ic_menu_agenda"
                 android:title="Profile" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@android:drawable/ic_menu_compass"
+                android:id="@+id/settings"
+                android:icon="@android:drawable/ic_menu_manage"
                 android:title="Settings" />
         </menu>
     </item>
