Contact Us skeleton

--- a/MyHome/app/src/main/res/menu/drawer_menu.xml
+++ b/MyHome/app/src/main/res/menu/drawer_menu.xml
@@ -23,6 +23,11 @@
             android:id="@+id/settings"
             android:icon="@android:drawable/ic_menu_manage"
             android:title="Settings" />
+
+        <item
+            android:id="@+id/contact_us"
+            android:icon="@android:drawable/ic_menu_help"
+            android:title="Contact Us" />
     </group>
 
     <!--<item android:title="Options">-->
