--- a/MyHome/app/src/main/res/layout/contact_us_activity.xml
+++ b/MyHome/app/src/main/res/layout/contact_us_activity.xml
@@ -13,6 +13,10 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
+        <include
+            android:id="@+id/contact_us"
+            layout="@layout/contact_us" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
