--- a/MyHome/app/src/main/res/layout/settings_activity.xml
+++ b/MyHome/app/src/main/res/layout/settings_activity.xml
@@ -13,17 +13,9 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Settings Activity Stuff Here..." />
-
-        </LinearLayout>
+        <include
+            android:id="@+id/settings"
+            layout="@layout/settings" />
 
     </LinearLayout>
 
