Added login and enrollment skeleton

--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -6,4 +6,7 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+
+    <style name="buttonStyle" parent="Base.TextAppearance.AppCompat.Button">
+    </style>
 </resources>
