--- a/MyHome/app/src/main/res/layout/navigation_activity.xml
+++ b/MyHome/app/src/main/res/layout/navigation_activity.xml
@@ -10,12 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize" />
 
-    <include
-        android:id="@+id/profile"
-        layout="@layout/profile"
-        android:layout_below="@id/toolbar"
+    <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_below="@id/toolbar" />
 
     <include
         android:id="@+id/bottom_navigation"
