--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -1,11 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Home Activity Stuff Here..." />
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="12dp">
+
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="Welcome Kevin!"
+            android:textSize="32sp" />
+
+        <TextView
+            android:id="@+id/subheader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="This is your new home for personalized health."
+            android:textSize="24sp" />
+
+        <LinearLayout
+            android:id="@+id/dyk_tod_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/subheader"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <RelativeLayout
+                android:id="@+id/dyk_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="12dp"
+                android:layout_weight=".5"
+                android:background="@drawable/border"
+                android:padding="12dp">
+
+                <TextView
+                    android:id="@+id/dyk_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Did you know?"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/dyk_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/dyk_header"
+                    android:text="Sun is good for you. Leave your apartment for once, Kevin..." />
+
+                <Button
+                    android:id="@+id/dyk_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/dyk_text"
+                    android:layout_centerHorizontal="true"
+                    android:text="Learn more" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/tod_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="12dp"
+                android:layout_weight=".5"
+                android:background="@drawable/border"
+                android:padding="12dp">
+
+                <TextView
+                    android:id="@+id/tod_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tip of the Day"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tod_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tod_header"
+                    android:text="If you want to be less pale, we recommend you don't live in your cubicle." />
+
+                <Button
+                    android:id="@+id/tod_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tod_text"
+                    android:layout_centerHorizontal="true"
+                    android:text="Learn more" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dyk_tod_layout"
+            android:layout_margin="12dp"
+            android:gravity="center_vertical"
+            android:background="@drawable/border"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight=".5"
+                android:layout_margin="12dp"
+                android:text="Tell us a little more about yourself by updating your profile." />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:layout_margin="12dp"
+                android:text="Go to Profile" />
+        </LinearLayout>
+
+    </RelativeLayout>
+</ScrollView>
