Added a way to navigate to pages from within Fragments. Go To Profile button now correctly navigates to the Profile Page.

--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -106,24 +106,25 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/dyk_tod_layout"
             android:layout_margin="12dp"
-            android:gravity="center_vertical"
             android:background="@drawable/border"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_weight=".5"
                 android:layout_margin="12dp"
+                android:layout_weight=".5"
+                android:gravity="center"
                 android:text="Tell us a little more about yourself by updating your profile." />
 
             <Button
+                android:id="@+id/button_profile"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".5"
                 android:layout_margin="12dp"
+                android:layout_weight=".5"
                 android:text="Go to Profile" />
         </LinearLayout>
 
