integrated Enrollment REST request.

--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="handlers"
-            type="com.dignityhealth.myhome.features.enrollment.EnrollmentFragment" />
+            type="com.dignityhealth.myhome.features.enrollment.EnrollmentFragment.EnrollmentViewClickEvent" />
     </data>
 
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
