Made layout for Contact Us.

--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -1,12 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="12dp">
 
     <TextView
+        android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Contact Us Activity Stuff Here..." />
+        android:layout_centerHorizontal="true"
+        android:layout_margin="12dp"
+        android:gravity="center"
+        android:text="Thank you for visiting Dignity Health. We're right here you need us."
+        android:textSize="24sp" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/subheader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/header"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="12dp"
+        android:gravity="center"
+        android:text="If this is an emergency, please call 911 immediately"
+        android:textColor="@color/red"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/email_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/subheader"
+        android:layout_margin="6dp"
+        android:text="By Email: "
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/email_label"
+        android:layout_margin="6dp"
+        android:text="hello@dignityhealth.com"
+        android:textColor="@color/light_blue"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/phone_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/email"
+        android:layout_margin="6dp"
+        android:text="By Phone: "
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/phone_label"
+        android:layout_margin="6dp"
+        android:autoLink="phone"
+        android:text="1-877-345-6788"
+        android:textColor="@color/light_blue"
+        android:textSize="20sp" />
+
+</RelativeLayout>
