Added "More" layout to access Contact Us, Settings.... Back button now pops off the back stack for Contact Us and Settings (every fragment with "More" needs to addToBackStack).

--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -62,7 +62,7 @@
         android:layout_margin="6dp"
         android:autoLink="phone"
         android:text="1-877-345-6788"
-        android:textColor="@color/light_blue"
+        android:textColorLink="@color/light_blue"
         android:textSize="20sp" />
 
 </RelativeLayout>
