--- a/MyHome/app/src/main/res/layout/bottom_navigation.xml
+++ b/MyHome/app/src/main/res/layout/bottom_navigation.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
-    app:itemBackground="@color/primary"
+    app:itemBackground="@color/white"
     app:itemIconTint="@drawable/navigation_icon_colors"
     app:itemTextColor="@drawable/navigation_icon_colors"
     app:menu="@menu/navigation_menu" />
