--- a/MyHome/app/src/main/res/layout/profile.xml
+++ b/MyHome/app/src/main/res/layout/profile.xml
@@ -23,8 +23,8 @@
             android:id="@+id/first_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginLeft="36dp"
+            android:layout_marginStart="36dp"
             android:layout_marginTop="12dp"
             android:text="First"
             app:layout_constraintLeft_toRightOf="parent"
@@ -44,6 +44,9 @@
             android:id="@+id/first_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:maxWidth="140dp"
             android:text="Kevin"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -54,6 +57,9 @@
             android:id="@+id/last_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:maxWidth="140dp"
             android:text="Welsh"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -64,6 +70,7 @@
             android:id="@+id/dob_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="Date of Birth"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/first_name" />
@@ -82,6 +89,7 @@
             android:id="@+id/address_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="Address"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/dob" />
@@ -111,6 +119,9 @@
             android:id="@+id/city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:maxWidth="140dp"
             android:text="St.Petersburg"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -121,6 +132,7 @@
             android:id="@+id/state_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="State"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/address" />
@@ -157,6 +169,7 @@
             android:id="@+id/phone_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="Phone"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/state" />
@@ -175,6 +188,7 @@
             android:id="@+id/email_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="Email"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/phone" />
@@ -244,6 +258,7 @@
             android:id="@+id/group_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="Group"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/provider" />
@@ -252,6 +267,7 @@
             android:id="@+id/group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="12dp"
             android:text="230-2333"
             android:textSize="18sp"
             android:textStyle="bold"
