Added enrollment security questions

--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -28,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:focusableInTouchMode="true"
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
@@ -38,6 +39,7 @@
                         android:id="@+id/firstName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:focusableInTouchMode="true"
                         android:hint="@string/prompt_first_name"
                         android:inputType="textEmailAddress"
                         android:maxLines="1" />
@@ -52,6 +54,7 @@
                         android:id="@+id/lastName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:focusableInTouchMode="true"
                         android:hint="@string/prompt_last_name"
                         android:inputType="textEmailAddress"
                         android:maxLines="1" />
@@ -66,6 +69,7 @@
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:focusableInTouchMode="true"
                         android:hint="@string/prompt_email"
                         android:inputType="textEmailAddress"
                         android:maxLines="1" />
@@ -80,7 +84,22 @@
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:focusableInTouchMode="true"
                         android:hint="@string/prompt_password"
+                        android:inputType="textPassword"
+                        android:maxLines="1" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/re_enter_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusableInTouchMode="true"
+                        android:hint="@string/prompt_re_enter_password"
                         android:inputType="textPassword"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -92,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:onClick="@{handlers::onClickEvent}"
-                    android:text="@string/action_register"
+                    android:text="@string/action_create_account"
                     android:textStyle="bold" />
 
                 <TextView
@@ -111,11 +130,11 @@
         <!-- Enroll progress -->
         <ProgressBar
             android:id="@+id/enroll_progress"
-            style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginBottom="8dp"
+            android:indeterminate="true"
             android:visibility="gone" />
     </RelativeLayout>
 </layout>
